# facelivebody

./: README.md
0. OpenRoleZoo-vs/: ORZ.sln  (+36 more)
1. SeetaNet/: CMakeLists.txt
1. SeetaNet/LinuxSln/: CMakeLists.txt  clean.sh  update.proto.sh
1. SeetaNet/LinuxSln/bash/: build_x64.sh  build_x86.sh
1. SeetaNet/include/: HolidayForward.h  HolidayStruct.h
1. SeetaNet/jni/: Android.mk  Application.mk
1. SeetaNet/src/: HolidayForward.cpp  HolidayNet.cpp  ReadFromHolidayLayer.cpp  im2col.cpp  simod_gemm.cpp
1. SeetaNet/src/cu/: HolidayBatchNormalizeGPU.cu  HolidayBatchToSpaceNDGPU.cu  HolidayBlobGPU.cu  HolidayCommon.cu  HolidayConcatGPU.cu  HolidayConvolutionGPU.cu  HolidayDeconvolutionGPU.cu  HolidayEltwiseGPU.cu  HolidayExpGPU.cu  HolidayInnerproductGPU.cu  HolidayLocalResponseNormalizeGPU.cu  HolidayMemoryDataLayerGPU.cu  HolidayPoolingGPU.cu  HolidayPoolintGPU.cu  HolidayPowerGPU.cu  HolidayPreReluGPU.cu  HolidayRealMulGPU.cu  HolidayReluGPU.cu  HolidayReshapeGPU.cu  HolidayScaleGPU.cu  HolidaySigmoidGPU.cu  HolidaySoftmaxGPU.cu  HolidaySpaceToBatchNDGPU.cu  HolidaySplitGPU.cu
1. SeetaNet/src/include_inner/: HolidayBaseLayer.h  HolidayBatchNormalizeGPU.h  HolidayBatchNormliseCPU.h  HolidayBatchToSpaceNDCPU.h  HolidayBatchToSpaceNDGPU.h  HolidayBlobCpu.h  HolidayBlobGpu.h  HolidayCommon.h  HolidayCommonCuda.h  HolidayCommonfuction.h  HolidayConcatCPU.h  HolidayConcatGPU.h  HolidayConvolutionCPU.h  HolidayConvolutionGPU.h  HolidayCreateLayerDetailCPU.h  HolidayCreateLayerDetailGPU.h  HolidayCreateLayerMapCPU.h  HolidayCreateLayerMapGPU.h  HolidayCropCPU.h  HolidayDeconvolutionCPU.h  HolidayDeconvolutionGPU.h  HolidayEltwiseCPU.h  HolidayEltwiseGPU.h  HolidayExpCPU.h  HolidayExpGPU.h  HolidayFeatureMap.h  HolidayInnerproductCPU.h  HolidayInnerproductGPU.h  HolidayLayerType.h  HolidayLocalResponseNormalizeCPU.h  HolidayLocalResponseNormalizeGPU.h  HolidayMemoryDataLayerCPU.h  HolidayMemoryDataLayerGPU.h  HolidayNet.h  HolidayNetResource.h  HolidayPReluCPU.h  HolidayPoolingCPU.h  HolidayPoolingGPU.h  HolidayPoolintGPU.h  HolidayPowerCPU.h  (+25 more)
1. SeetaNet/src/orz/mem/: pot.cpp  pot.h  vat.cpp  vat.h
1. SeetaNet/src/orz/sync/: canyon.cpp  canyon.h  cartridge.cpp  cartridge.h  shotgun.cpp  shotgun.h
1. SeetaNet/src/orz/tools/: box.cpp  box.h  ctxmgr_lite.h  ctxmgr_lite_support.h  void_bind.h
1. SeetaNet/src/proto/: HolidayCNN_proto.pb.cc  HolidayCNN_proto.pb.h  update.cmd
1. SeetaNet/windowsSln/SeetaNet/: SeetaNet-cpu.vcxproj  SeetaNet.rc  SeetaNet.sln  SeetaNet.vcxproj  SeetaNet.vcxproj.filters  resource.h
1. SeetaNet/windowsSln/src/cu/: HolidayBatchNormalizeGPU.cu.deps  HolidayBatchToSpaceNDGPU.cu.deps  HolidayBlobGPU.cu.deps  HolidayCommon.cu.deps  HolidayConcatGPU.cu.deps  HolidayConvolutionGPU.cu.deps  HolidayDeconvolutionGPU.cu.deps  HolidayEltwiseGPU.cu.deps  HolidayExpGPU.cu.deps  HolidayInnerproductGPU.cu.deps  HolidayLocalResponseNormalizeGPU.cu.deps  HolidayMemoryDataLayerGPU.cu.deps  HolidayPoolingGPU.cu.deps  HolidayPoolintGPU.cu.deps  HolidayPowerGPU.cu.deps  HolidayPreReluGPU.cu.deps  HolidayRealMulGPU.cu.deps  HolidayReluGPU.cu.deps  HolidayReshapeGPU.cu.deps  HolidayScaleGPU.cu.deps  HolidaySigmoidGPU.cu.deps  HolidaySoftmaxGPU.cu.deps  HolidaySpaceToBatchNDGPU.cu.deps  HolidaySplitGPU.cu.deps
5. PoseEstimation/PoseEstimation/: CMakeLists.txt  ExportLibrary.props  PoseEstimation.vcxproj  PoseEstimation.vcxproj.filters  SeetaLock.props  VIPLPoseEstimation.cpp  VIPLPoseEstimation.h  WithDog.props  common_alignment.iobj  common_alignment.ipdb  orz_resources.orc
5. PoseEstimation/PoseEstimation/include/seeta/: CPoseEstimator.h  PoseEstimator.h
5. PoseEstimation/PoseEstimation/jni/: Android.mk  Application.mk
5. PoseEstimation/PoseEstimation/seeta/: ImageProcess.h  ModelHeader.h
5. PoseEstimation/PoseEstimation/src/: CPoseEstimator.cpp  PoseEstimator.cpp
6. EyeBlinkDetector/EyeBlinkDetector/: CMakeLists.txt  ExportLibrary.props  EyeBlinkDetector.vcxproj  EyeBlinkDetector.vcxproj.filters  JNIEyeBlinkDetector.cpp  JNIEyeBlinkDetector.h  ORZ.props  VIPLEyeBlinkDetector.cpp  WithDog.props  common_alignment.iobj  readme.txt
6. EyeBlinkDetector/EyeBlinkDetector/jni/: Android.mk  Application.mk
6. EyeBlinkDetector/EyeBlinkDetector/seeta/: CommonStruct.h  ForwardNet.h  ImageProcess.cpp  ImageProcess.h  Struct.h  common_alignment.cpp  common_alignment.h
7. SEETAPassiveFASAndShakeHead/IOS/SEETAPassiveFASAndShakeHead/: CMakeLists.txt  README.md  SeetaPassiveFaceAntiSpoofing.sln  build.sh  build.vs2013.cmd  build_sim64.sh  copy2cherry.sh
7. SEETAPassiveFASAndShakeHead/IOS/SEETAPassiveFASAndShakeHead/SeetaPassiveFaceAntiSpoofing/: BaseAction.h  CMakeLists.txt  ClarityEstimateClass.cpp  EyeAction.cpp  FusionFASProcess.cpp  FusionFASProcess.h  NodHead.cpp  SEETACPassiveFASAndShakeHead.cpp  SEETACPassiveFASAndShakeHead.h  SEETAPassiveFASAndShakeHead.cpp  SEETAPassiveFASAndShakeHead.h  SEETAPassiveFaceAntiSpoofing.cpp  SEETAPassiveFaceAntiSpoofing.h  SeetaEyeBlinkDetector.props  SeetaFaceRecognizer.props  SeetaPassiveFaceAntiSpoofing.vcxproj  (+1 more)
7. SEETAPassiveFASAndShakeHead/Windows/: CMakeLists.txt  SeetaPassiveFaceAntiSpoofing - 13.sln  SeetaPassiveFaceAntiSpoofing.sln  make-clean.bat
7. SEETAPassiveFASAndShakeHead/Windows/SeetaPassiveFaceAntiSpoofing/: BaseAction.h  CMakeLists.txt  ClarityEstimateClass.cpp  ClarityEstimateClass.h  EyeAction.h  FusionFASProcess.cpp  FusionFASProcess.h  NodHead.h  SEETACPassiveFASAndShakeHead.cpp  SEETACPassiveFASAndShakeHead.h  SEETAPassiveFASAndShakeHead.cpp  SEETAPassiveFASAndShakeHead.h  SeetaEyeBlinkDetector.props  SeetaPassiveFaceAntiSpoofing.vcxproj  SeetaPoseEstimation.props  ShakeHead.cpp  ShakeHead.h  VIPLStruct.h
7. SEETAPassiveFASAndShakeHead/Windows/cmake/: EBDv130.cmake  PEv100.cmake
7. SEETAPassiveFASAndShakeHead/Windows/testit/: CMakeLists.txt  ImportLibrary.props  OpenCV2.props  OpenCV3.props  SeetaEyeBlinkDetector.props  SeetaFaceDetector.props  SeetaPointDetector.props  SeetaPoseEstimation.props  holiday.props  main.cpp  puttextzh.cpp  puttextzh.h  testit.sln  testit.vcxproj  testit.vcxproj.filters
(+330 files in other folders)
